--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -28,6 +28,18 @@
   overflow: hidden;
 }
 
+.background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url(../bricks);
+  background-size: 500px;
+  -webkit-filter: contrast(200%) grayscale(100%) brightness(10%);
+          filter: contrast(200%) grayscale(100%) brightness(10%);
+}
+
 /* NAV BAR */
 header {
   width: 100%;
@@ -379,7 +391,6 @@ a:visited {
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
-  background-color: var(--background-off);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 100%;
@@ -396,23 +407,9 @@ a:visited {
   overflow: hidden;
 }
 
-.Title .background {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-image: url(../bricks);
-  background-size: 500px;
-  -webkit-filter: contrast(200%) grayscale(100%) brightness(10%);
-          filter: contrast(200%) grayscale(100%) brightness(10%);
-  -webkit-transform: rotateX(10deg);
-          transform: rotateX(10deg);
-}
-
 .Title .wrapper {
   position: absolute;
-  top: 20%;
+  top: 40%;
   left: 50%;
   width: 85vmin;
   height: 26vmin;
@@ -472,8 +469,6 @@ a:visited {
 }
 
 .Title .job {
-  font-family: 'Sacramento', cursive;
-  font-family: 'Rubik', sans-serif;
   font-family: 'Yanone Kaffeesatz', sans-serif;
   text-align: center;
   position: absolute;
@@ -502,16 +497,312 @@ a:visited {
           animation-delay: 3s;
 }
 
-.Title .ground {
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+.Title .arrow {
   position: absolute;
-  top: 80vh;
-  right: 0;
-  height: 100vh;
-  left: 0;
-  background-image: url(../asphalt);
-  background-size: 1000px;
+  color: var(--light-off);
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.Title .arrow-1 {
+  top: 65%;
+  -webkit-animation: blinkArrow1 linear infinite 5s;
+          animation: blinkArrow1 linear infinite 5s;
+}
+
+.Title .arrow-2 {
+  top: 75%;
+  -webkit-animation: blinkArrow2 linear infinite 5s;
+          animation: blinkArrow2 linear infinite 5s;
+}
+
+.Title .arrow-3 {
+  top: 85%;
+  -webkit-animation: blinkArrow3 linear infinite 5s;
+          animation: blinkArrow3 linear infinite 5s;
+}
+
+@-webkit-keyframes blinkArrow1 {
+  14% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  15% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  69% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  70% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  73% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  74% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  77% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  80% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  81% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  99% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  100% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+}
+
+@keyframes blinkArrow1 {
+  14% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  15% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  69% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  70% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  73% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  74% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  77% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  80% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  81% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  99% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  100% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+}
+
+@-webkit-keyframes blinkArrow2 {
+  29% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  30% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  69% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  70% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  73% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  74% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  77% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  80% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  81% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  99% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  100% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+}
+
+@keyframes blinkArrow2 {
+  29% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  30% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  69% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  70% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  73% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  74% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  77% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  80% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  81% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  99% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  100% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+}
+
+@-webkit-keyframes blinkArrow3 {
+  44% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  45% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  69% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  70% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  73% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  74% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  77% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  80% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  81% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  99% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  100% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+}
+
+@keyframes blinkArrow3 {
+  44% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  45% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  69% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  70% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  73% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  74% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  77% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  80% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  81% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  99% {
+    color: var(--light-on);
+    text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+  }
+  100% {
+    color: inherit;
+    text-shadow: inherit;
+  }
 }
 
 @-webkit-keyframes blink {
@@ -578,16 +869,6 @@ a:visited {
     color: inherit;
     text-shadow: inherit;
   }
-}
-
-.Title .arrow-down {
-  opacity: 0;
-}
-
-.Title .arrow-down a,
-.Title .arrow-down a:visited {
-  color: white;
-  color: black;
 }
 
 /* ------------------------------------------ ABOUT VIEW --------------------------------- */
@@ -703,6 +984,7 @@ a:visited {
   padding-top: 10vh;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  color: white;
 }
 
 #project-1, #project-3 {
