--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,6 +19,17 @@
     align-items: center;
     overflow: hidden;
   }
+
+  .background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: url(../bricks);
+    background-size: 500px;
+    filter: contrast(200%) grayscale(100%) brightness(10%);
+  }
   
   /* NAV BAR */
   
@@ -288,7 +299,6 @@
     text-align: center;
     justify-content: center;
     position: relative;
-    background-color: var(--background-off);
     box-sizing: border-box;
     width: 100%;
     display: flex;
@@ -296,22 +306,10 @@
     flex-direction: column;
     min-height: 100vh;
     overflow: hidden;
-
-    .background {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background-image: url(../bricks);
-      background-size: 500px;
-      filter: contrast(200%) grayscale(100%) brightness(10%);
-      transform: rotateX(10deg);
-    }
     
     .wrapper {
       position: absolute;
-      top: 20%;
+      top: 40%;
       left: 50%;
       width: 85vmin;
       height: 26vmin;
@@ -373,8 +371,6 @@
     }
 
     .job {
-      font-family: 'Sacramento', cursive;
-      font-family: 'Rubik', sans-serif;
       font-family: 'Yanone Kaffeesatz', sans-serif;
       text-align: center;
       position: absolute;
@@ -397,15 +393,135 @@
       animation-delay: 3s;
     }
 
-    .ground {
-      transform-style: preserve-3d;
+    .arrow {
       position: absolute;
-      top: 80vh;
-      right: 0;
-      height: 100vh;
-      left: 0;
-      background-image: url(../asphalt);
-      background-size: 1000px;
+      color: var(--light-off);
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .arrow-1 {
+      top: 65%;
+      animation: blinkArrow1 linear infinite 5s;
+    }
+    
+    .arrow-2 {
+      top: 75%;
+      animation: blinkArrow2 linear infinite 5s;
+    }
+    
+    .arrow-3 {
+      top: 85%;
+      animation: blinkArrow3 linear infinite 5s;
+    }
+
+  }
+
+  @keyframes blinkArrow1 {
+    14% {color: inherit;
+        text-shadow: inherit;
+    };
+    15% {color: var(--light-on);
+        text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+      }
+    69% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    70% {color: inherit;
+      text-shadow: inherit;
+    }
+    73% {color: inherit;
+      text-shadow: inherit;
+    }
+    74% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    77% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    80% {color: inherit;
+      text-shadow: inherit;
+    }
+    81% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    99% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    100% {color: inherit;
+      text-shadow: inherit;
+    }
+  }
+  
+  @keyframes blinkArrow2 {
+    29% {color: inherit;
+      text-shadow: inherit;
+    };
+    30% {color: var(--light-on);
+        text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+      }
+    69% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    70% {color: inherit;
+      text-shadow: inherit;
+    }
+    73% {color: inherit;
+      text-shadow: inherit;
+    }
+    74% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    77% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    80% {color: inherit;
+      text-shadow: inherit;
+    }
+    81% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    99% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    100% {color: inherit;
+      text-shadow: inherit;
+    }
+  }
+  
+  @keyframes blinkArrow3 {
+    44% {color: inherit;
+      text-shadow: inherit;
+    };
+    45% {color: var(--light-on);
+        text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+      }
+    69% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    70% {color: inherit;
+      text-shadow: inherit;
+    }
+    73% {color: inherit;
+      text-shadow: inherit;
+    }
+    74% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    77% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    80% {color: inherit;
+      text-shadow: inherit;
+    }
+    81% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    99% {color: var(--light-on);
+      text-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    };
+    100% {color: inherit;
+      text-shadow: inherit;
     }
   }
 
@@ -441,17 +557,6 @@
        text-shadow: inherit;
      }
    }
-  
-  .Title .arrow-down {
-    opacity: 0;
-  }
-  
-  .Title .arrow-down a,
-  .Title .arrow-down a:visited {
-    color: white;
-    color: black;
-  }
-  
   
   /* ------------------------------------------ ABOUT VIEW --------------------------------- */
   
@@ -541,6 +646,7 @@
     display: grid;
     padding-top: 10vh;
     box-sizing: border-box;
+    color: white;
   }
   
   #project-1, #project-3 {
