--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -38,11 +38,12 @@
   position: absolute;
   top: 1vh;
   left: 1vw;
-  height: 9vh;
-  width: 9vh;
+  height: 9vmin;
+  width: 9vmin;
   cursor: pointer;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
+  opacity: 0;
 }
 
 .Nav .compass-container img {
@@ -53,8 +54,8 @@
 }
 
 .Nav .compass-container:hover {
-  -webkit-transform: rotate(10deg);
-          transform: rotate(10deg);
+  -webkit-transform: rotate(15deg);
+          transform: rotate(15deg);
 }
 
 .Nav .link-container {
@@ -63,7 +64,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 10vh;
+  margin-left: 10vw;
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
@@ -108,8 +109,8 @@
 }
 
 .Nav .link {
-  height: 8vh;
-  width: 8vh;
+  height: 9vmin;
+  width: 9vmin;
   color: white;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -120,7 +121,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 1vh;
   cursor: pointer;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
@@ -254,8 +254,8 @@ a:visited {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -60%);
+          transform: translate(-50%, -60%);
   -webkit-box-shadow: 0 0 100px .5vmin #4d4dff, 0 0 100px .5vmin #4d4dff inset;
           box-shadow: 0 0 100px .5vmin #4d4dff, 0 0 100px .5vmin #4d4dff inset;
 }
@@ -273,6 +273,8 @@ a:visited {
           box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.6), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.6);
   -webkit-animation: blinkRings 3s infinite;
           animation: blinkRings 3s infinite;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
 }
 
 @-webkit-keyframes blinkRings {
@@ -373,11 +375,28 @@ a:visited {
   line-height: 1em;
 }
 
+.Title .rocket-container {
+  height: 35vmin;
+  width: 35vmin;
+  position: absolute;
+  top: 75%;
+  left: 75%;
+  -webkit-transform: translate(-50%, -50%) rotate(60deg);
+          transform: translate(-50%, -50%) rotate(60deg);
+}
+
+.Title .rocket-container img {
+  max-height: 100%;
+  max-width: 100%;
+  -webkit-filter: invert(97%) sepia(11%) saturate(1152%) hue-rotate(292deg) brightness(108%) contrast(105%);
+          filter: invert(97%) sepia(11%) saturate(1152%) hue-rotate(292deg) brightness(108%) contrast(105%);
+}
+
 .Title .job {
   font-family: 'Yanone Kaffeesatz', sans-serif;
   text-align: center;
   position: absolute;
-  bottom: 5vmin;
+  bottom: 10vh;
   left: 80%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -400,32 +419,6 @@ a:visited {
           animation: blink linear infinite 2.5s;
   -webkit-animation-delay: 3s;
           animation-delay: 3s;
-}
-
-.Title .arrow {
-  position: absolute;
-  color: var(--light-off);
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.Title .arrow-1 {
-  top: 65%;
-  -webkit-animation: blinkArrow1 linear infinite 5s;
-          animation: blinkArrow1 linear infinite 5s;
-}
-
-.Title .arrow-2 {
-  top: 75%;
-  -webkit-animation: blinkArrow2 linear infinite 5s;
-          animation: blinkArrow2 linear infinite 5s;
-}
-
-.Title .arrow-3 {
-  top: 85%;
-  -webkit-animation: blinkArrow3 linear infinite 5s;
-          animation: blinkArrow3 linear infinite 5s;
 }
 
 @-webkit-keyframes blinkArrow1 {
@@ -1050,7 +1043,10 @@ a:visited {
 }
 
 .Contact .title h2 {
-  font-size: 7vh;
+  font-family: 'Sacramento', cursive;
+  color: #feffff;
+  text-shadow: 0 -5vh 10vh, 0 0 5px, 0 0 1em #ffffff, 0 0 0.5em #ffffff, 0 0 0.1em #ffffff, 0 10px 3px #000;
+  font-size: 8vmin;
   margin: 0;
 }
 
