--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -38,10 +38,11 @@
       position: absolute;
       top: 1vh;
       left: 1vw;
-      height: 9vh;
-      width: 9vh;
+      height: 9vmin;
+      width: 9vmin;
       cursor: pointer;
       transition: all 300ms ease-in-out;
+      opacity: 0;
 
       img {
         height: 100%;
@@ -51,14 +52,14 @@
     }
 
     .compass-container:hover {
-      transform: rotate(10deg);
+      transform: rotate(15deg);
     }
 
     .link-container {
       width: 90vw;
       position: absolute;
       display: flex;
-      margin-left: 10vh;
+      margin-left: 10vw;
       justify-content: space-around;
 
       .link {
@@ -97,13 +98,13 @@
     }
 
     .link {
-      height: 8vh;
-      width: 8vh;
+      height: 9vmin;
+      width: 9vmin;
       color: white;
       display: flex;
       justify-content: center;
       align-items: center;
-      margin: 1vh;
+      // margin: 1vmin;
       cursor: pointer;
       transition: all 300ms ease-in-out;
 
@@ -180,7 +181,7 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      transform: translate(-50%, -60%);
       box-shadow: 0 0 100px .5vmin #4d4dff, 0 0 100px .5vmin #4d4dff inset;
     }
 
@@ -193,6 +194,7 @@
       transform: translate(-50%, -50%) rotate(-20deg);
       box-shadow: -.6vmin .6vmin .6vmin rgba(255, 255, 0, .6), .6vmin .6vmin .6vmin rgba(255, 255, 0, .6);
       animation: blinkRings 3s infinite;
+      animation-delay: 3s;
     }
 
 
@@ -232,11 +234,26 @@
       line-height: 1em;
     }
 
+    .rocket-container {
+      height: 35vmin;
+      width: 35vmin;
+      position: absolute;
+      top: 75%;
+      left: 75%;
+      transform: translate(-50%, -50%) rotate(60deg);
+
+      img {
+        max-height: 100%;
+        max-width: 100%;
+        filter: invert(97%) sepia(11%) saturate(1152%) hue-rotate(292deg) brightness(108%) contrast(105%);
+      }
+    }
+
     .job {
       font-family: 'Yanone Kaffeesatz', sans-serif;
       text-align: center;
       position: absolute;
-      bottom: 5vmin;
+      bottom: 10vh;
       left: 80%;
       transform: translate(-50%, -50%);
       font-size: 4vmin;
@@ -253,28 +270,6 @@
     .text span:nth-of-type(2) {
       animation: blink linear infinite 2.5s;
       animation-delay: 3s;
-    }
-
-    .arrow {
-      position: absolute;
-      color: var(--light-off);
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    .arrow-1 {
-      top: 65%;
-      animation: blinkArrow1 linear infinite 5s;
-    }
-    
-    .arrow-2 {
-      top: 75%;
-      animation: blinkArrow2 linear infinite 5s;
-    }
-    
-    .arrow-3 {
-      top: 85%;
-      animation: blinkArrow3 linear infinite 5s;
     }
 
   }
@@ -491,6 +486,28 @@
     left: 0;
     transform: translate(0, -50%);
   }
+
+  // .arrow {
+  //   position: absolute;
+  //   color: var(--light-on);
+  //   left: 50%;
+  //   transform: translate(-50%, -50%);
+  // }
+
+  // .arrow-1 {
+  //   top: 65%;
+  //   animation: blinkArrow1 linear infinite 5s;
+  // }
+  
+  // .arrow-2 {
+  //   top: 75%;
+  //   animation: blinkArrow2 linear infinite 5s;
+  // }
+  
+  // .arrow-3 {
+  //   top: 85%;
+  //   animation: blinkArrow3 linear infinite 5s;
+  // }
   
   .project {
     height: 100vh;
@@ -630,7 +647,10 @@
   }
   
   .Contact .title h2 {
-    font-size: 7vh;
+    font-family: 'Sacramento', cursive;
+    color: #feffff;
+    text-shadow: 0 -5vh 10vh, 0 0 5px, 0 0 1em #ffffff, 0 0 0.5em #ffffff, 0 0 0.1em #ffffff, 0 10px 3px #000;
+    font-size: 8vmin;
     margin: 0;
   }
   
